force-app/main/default/objects/custom_create47__c/custom_create47__c.object-meta.xml
<CustomObject>
    <label>Custom created object47</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects47</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>