force-app/main/default/objects/custom_create47__c/fields/custom_create_47field528__c.field-meta.xml
<CustomField>
    <fullName>custom_create_47field528__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 47field528</label>
    <type>Checkbox</type>
</CustomField>